[v4] fix scrollbar appearing in sidebar (#3720)
* replace `overflow-y: scroll` with `overflow-y: auto`

* fix netlify graphql function

--- a/packages/graphiql-react/src/ui/dropdown.css
+++ b/packages/graphiql-react/src/ui/dropdown.css
@@ -12,7 +12,7 @@
     calc(var(--radix-dropdown-menu-content-available-height) - 10px),
     400px
   );
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .graphiql-dropdown-item {
